# openmumble

./: .gitignore  Makefile  PRIVACY.md  Package.swift  README.md  config.example.yaml  pyproject.toml
.github/workflows/: build.yml  release-appstore.yml  release.yml
Casks/: openmumble.rb  pushietalkie.rb
Resources/: ExportOptions-AppStore.plist  HoldToTalk.direct.entitlements  HoldToTalk.entitlements  HoldToTalk.icns  Info.plist  OpenMumble.icns  PrivacyInfo.xcprivacy
Sources/HoldToTalk/: AppInstallHelper.swift  AppUpdateDriver.swift  AudioRecorder.swift  DebugLog.swift  DictationEngine.swift  HoldToTalkApp.swift  HotkeyManager.swift  ModelManager.swift  ModelTrustView.swift  OnboardingResetHelper.swift  OnboardingView.swift  RecordingHUD.swift  SettingsView.swift  SystemSettingsHelper.swift  TextInserter.swift  Transcriber.swift
Sources/OpenMumble/: AudioRecorder.swift  ClaudeProcessor.swift  DebugFlags.swift  DebugLog.swift  DictationEngine.swift  HotkeyManager.swift  ModelManager.swift  OnboardingView.swift  OpenMumbleApp.swift  RecordingHUD.swift  SettingsView.swift  TextInserter.swift  Transcriber.swift
Sources/PushieTalkie/: DebugFlags.swift  DebugLog.swift  DictationEngine.swift  ModelManager.swift  OnboardingView.swift  PushieTalkieApp.swift  SettingsView.swift
Tests/HoldToTalkTests/: AppInstallHelperTests.swift  DebugLogTests.swift  WhisperModelInfoTests.swift
docs/: appcast.xml  index.html  permissions.md  privacy.html
scripts/: package-dmg.sh  render-dmg-background.swift
src/openmumble/: __init__.py  __main__.py  app.py  audio.py  config.py  (+3 more)
